# libnoiseutils

./: .gitignore  CMakeLists.txt  README.md
include/noise/: noiseutils.h
src/: noiseutils.cpp
